objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BusinessPhone__c</fullName>
        <description>Customers phone number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CampaignSource__c</fullName>
        <label>Campaign Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>HARV</fullName>
                </value>
                <value>
                    <fullName>Home Loan Report</fullName>
                </value>
                <value>
                    <fullName>IL Onboarding</fullName>
                </value>
                <value>
                    <fullName>MRA-Runoff</fullName>
                </value>
                <value>
                    <fullName>OSC Lead</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Outreatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>someone that has been sent donations from ICCU</description>
        <inlineHelpText>Use this to distinguish a Community outreach contact</inlineHelpText>
        <label>Community Outreatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsumerSegment__c</fullName>
        <inlineHelpText>Semi-Annual Assigned Segment Description from Raddon Research</inlineHelpText>
        <label>Consumer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Driven</fullName>
                </value>
                <value>
                    <fullName>Fee Driven</fullName>
                </value>
                <value>
                    <fullName>Low Income Depositor</fullName>
                </value>
                <value>
                    <fullName>Middle Income Depositor</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
                <value>
                    <fullName>Upscale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditScoreDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <inlineHelpText>FICO</inlineHelpText>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultBranchName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultBranch__c</fullName>
        <description>Provides the default branch of the members share savings account for Avoka&apos;s use.  The value contains the branch ID and name in JSON for use in code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrolledInEstatements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Member enrolled in eStatements (DNA Flag) - Delivery Flag tied to Share Account</inlineHelpText>
        <label>Enrolled in eStatements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if the contact from a dealership has opted in to receive funding notices</description>
        <label>Funding Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IL_Marketing_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be updated automatically from DNA based on the Indirect  Marketing Promotions opt-in, email opt-in and email address.</description>
        <label>IL Marketing Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdentificationExpirationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdentificationIssueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdentificationIssueState__c</fullName>
        <label>Identification Issue State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentificationNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentificationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies that this member account is owned by an Employee.  Additional security settings apply to these records.</description>
        <label>Is Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JointAccountCount__c</fullName>
        <label>Joint Account Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JointAccountIDs__c</fullName>
        <description>This is a list joint account person ID&apos;s for the purpose of adding new accounts in DNA.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Account IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Contact has opted in to receive marketing promotional materials</description>
        <label>Marketing Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberGroup__c</fullName>
        <description>Member Group Field in DNA Core or Seg Code Description in Raddon</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Member Group Field in DNA Core or Seg Code Description in Raddon</inlineHelpText>
        <label>Member Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MemberNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Member Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MemberSince__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipType__c</fullName>
        <description>The membership type corresponds with the way the type is used by the core DNA and Raddon reports, meaning the membership type indicates the original type of share savings account associated with the DNA person.</description>
        <inlineHelpText>The membership type indicates the original type of share savings account associated with the DNA person.</inlineHelpText>
        <label>Membership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MergeIntoId__c</fullName>
        <description>The MergeContactBatch process will merge all of the contacts with this field set and auto-merge the associated accounts.  This field should be used by administrators only!</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set to the 18 digit contact Id that this record should be merged into.</inlineHelpText>
        <label>Merge Into Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewName__c</fullName>
        <formula>PersonNumber__c &amp; &quot; &quot; &amp;  FirstName &amp; &quot; &quot;  &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes is used to record details about the contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NpsStatus__c</fullName>
        <inlineHelpText>Most recent Net Promoter Score</inlineHelpText>
        <label>NPS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnlineAgreementIDs__c</fullName>
        <description>Provides WWW agreement IDs for Avoka to use.  Values is stored in JSON format for use in code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online Agreement IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnlineBankingEnrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently enrolled in eBranch - Person Agreement (WWW)</inlineHelpText>
        <label>Online Banking Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnlineBankingLoggedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the member has ever logged into the online banking system.</inlineHelpText>
        <label>Online Banking Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnlineBankingStatus__c</fullName>
        <inlineHelpText>Active eBranch Users</inlineHelpText>
        <label>Online Banking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonNumber__c</fullName>
        <description>Number provided by DNA</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Person Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PreferredName__c</fullName>
        <description>The preferred name of the contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PreferredName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>This field is used to avoid duplicate records within the same record type (e.g. TaxId__c)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipScore__c</fullName>
        <inlineHelpText>Please enter a relationship score between 1-10.</inlineHelpText>
        <label>Relationship Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondaryOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxIDOwnerCount__c</fullName>
        <label>Tax ID Owner Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Tax ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifiedIdentityPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether the identity of the user was verified over the phone per the policy when making a name/address change.</description>
        <inlineHelpText>Verification of identification must be completed for all changes of address requested by phone.  Verification is completed by obtaining correct answers to no less than 2 identifying questions and 1 out of wallet question.  Check to indicate this was done.</inlineHelpText>
        <label>Verified Identity - Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18DigitContactID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Contact ID</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PersonNumber__c</columns>
        <columns>MemberNumber__c</columns>
        <columns>TaxID__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CreditScore__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Christmas_Cards</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Austin,Jorgensen,Anderson,Massie,Roth</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <label>Christmas Cards</label>
    </listViews>
    <listViews>
        <fullName>Christmas_Cards1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Todd</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>DAn</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
        </filters>
        <label>Christmas Cards</label>
    </listViews>
    <listViews>
        <fullName>Dead_Unqualified_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Dead</value>
        </filters>
        <label>My Dead/Unqualified Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SecondaryOwner__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacted</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <label>My Contacted Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Qualified</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <label>My Qualified Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Recent_Activity_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.LAST_ACTIVITY</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Recent Activity Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>My Warm Open Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_Experian</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CampaignSource__c</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <filters>
            <field>CampaignSource__c</field>
            <operation>contains</operation>
            <value>experian</value>
        </filters>
        <label>My Warm Open Experian</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_Home_Loans</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>My Warm Open Home Loans</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_IL_Onboarding</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CampaignSource__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <filters>
            <field>CampaignSource__c</field>
            <operation>contains</operation>
            <value>onboarding</value>
        </filters>
        <label>My Warm Open IL Onboarding</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_Leads_Ready_to_Call</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>My Warm Open Leads Ready to Call</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_OSC_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>My Warm Open OSC Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Warm_Open_Runoff</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CampaignSource__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <filters>
            <field>CampaignSource__c</field>
            <operation>contains</operation>
            <value>runoff</value>
        </filters>
        <label>My Warm Open Runoff</label>
    </listViews>
    <recordTypes>
        <fullName>Community</fullName>
        <active>true</active>
        <description>This contact has received donations from ICCU</description>
        <label>Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>DNA</fullName>
        <active>true</active>
        <description>Imported from DNA</description>
        <label>DNA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>All records not currently assigned to record type for created experience</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lock_down_Record_Type</fullName>
        <active>true</active>
        <description>This will prevent any other profile besides Admin to change Contact Record Type</description>
        <errorConditionFormula>AND(ISCHANGED(RecordTypeId), 
NOT( $Profile.Name = &quot;System Administrator&quot;)&amp;&amp;
NOT( $Profile.Name = &quot;API Batch&quot;))</errorConditionFormula>
        <errorMessage>You cannot change Contact Record Type. Request help from System Admin for more information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_as_Read_Only</fullName>
        <active>true</active>
        <description>Name (First Name, Middle Name, and Last name) cannot change by the users other then System Administrator and API profiles.</description>
        <errorConditionFormula>AND(

$Profile.Name  &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name  &lt;&gt; &quot;API Avoka&quot;,
$Profile.Name  &lt;&gt; &quot;API Batch&quot;,
$Profile.Name  &lt;&gt; &quot;API Precision Lender&quot;,
$Profile.Name  &lt;&gt; &quot;API QA&quot;,
$Profile.Name  &lt;&gt; &quot;API Service&quot;,
OR(
ISCHANGED( Salutation),
ISCHANGED(FirstName),
ISCHANGED(LastName),
ISCHANGED( MiddleName),
$Profile.Name = &quot;The Blocked Profile&quot;))</errorConditionFormula>
        <errorMessage>You cannot modify the name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Email</fullName>
        <active>true</active>
        <description>The Contact record has to have a valid email if the Funding Notice or the Marketing Promotions check boxes are checked</description>
        <errorConditionFormula>(Funding_Notice__c  ||   IL_Marketing_Promotions__c )  = True
 &amp;&amp;  Email  = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>A valid email is required to send Funding notices or Marketing promotions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Tax_ID</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK( TaxID__c ),
REGEX( TaxID__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;),
REGEX(TaxID__c, &quot;[0-9]{2}-[0-9]{7}&quot;)
)
)</errorConditionFormula>
        <errorMessage>Invalid Tax ID</errorMessage>
    </validationRules>
</CustomObject>